...
        month: 'Jan 2025',
      },
    ],
    Sell: [
      {
        id: '7',
        type: 'Sell ETH',
        amount: '-0.9 ETH',
        date: '5 min ago',
        status: 'Success',
        isPositive: false,
        month: 'Feb 2025',
      },
      {
        id: '8',
        type: 'Sell USDT',
        amount: '-525.50 USDT',
        date: 'Yesterday - 07:15',
        status: 'Success',
        isPositive: false,
        month: 'Feb 2025',
      },
...
